# starter-kit

./: Cargo.toml  README.md
api/: Cargo.toml  README.md
api/src/: authors_handler.rs  blobs_handler.rs  docs_handler.rs  gateway_handler.rs  lib.rs
cord/: Cargo.toml
cord/src/: cord.rs  lib.rs  profile.rs
core/: Cargo.toml  README.md
core/src/: authors.rs  blobs.rs  docs.rs  lib.rs
docs/: README.md  authors-api.md  blobs-api.md  docs-api.md
docs/api/: gateway-api.md
docs/concepts/: authors.md  blobs.md  docs.md
docs/guides/: collaborative-doc.md  create-doc-and-add-blobs.md  enforce-schema.md
docs/postman-collection/: starter-kit.json
frontend/: package-lock.json
frontend/src/: App.js
gateway/: Cargo.toml  README.md
gateway/src/: access_control.rs  lib.rs  storage.rs
helpers/: Cargo.toml  README.md
helpers/src/: cli.rs  frontend.rs  lib.rs  state.rs  utils.rs
iroh-data/: blobs.db  default-author  docs.redb  secret-key
keystore/: Cargo.toml  README.md
keystore/src/: keystore.rs
node/: Cargo.toml  README.md
node/src/: iroh_wrapper.rs  lib.rs
router/: Cargo.toml  README.md
router/src/: router.rs
src/: authors.rs  blobs.rs  cli.rs  docs.rs  handlers.rs  helper.rs  iroh_wrapper.rs  lib.rs  main.rs  state.rs  utils.rs
src/API_handlers/: authors_handler.rs  blobs_handler.rs  docs_handler.rs
src/iroh_core/: authors.rs  blobs.rs  docs.rs
src/node/: iroh_wrapper.rs
src/router/: router.rs
