[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
iroh = "0.33.0"
iroh-blobs = { version = "0.33.1", features = ["rpc"] }
iroh-docs = { version = "0.33.0", features = ["rpc"] }
tokio = { version = "1.30.0", features = ["full"] }
iroh-base = "=0.33.0"
jsonschema = "0.30.0"
quic-rpc = "0.18.3"
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
bytes = "1.10.1"
regex = "1.11.1"
anyhow = "1"
futures = "=0.3.31"
tempfile = "3.19.1"
subxt-rpcs = "0.42.1"
subxt = "0.42.1"

helpers = { path = "../helpers" }
node = { path = "../node"}
keystore = { path = "../keystore" }
cord = { path = "../cord" }