[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
axum = { version = "0.7.9", features = ["multipart", "macros"] }

helpers = { path = "../helpers" }