[package]
name = "helpers"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
data-encoding = "2.9.0"
sp-core = "36.1.0"
anyhow = "1"
serde_json = "1.0.140"
regex = "1.11.1"
iroh-docs = { version = "0.33.0", features = ["rpc"] }
iroh-blobs = { version = "0.33.1", features = ["rpc"] }
iroh-base = "=0.33.0"
axum = { version = "0.7.9", features = ["multipart", "macros"] }