[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
iroh = "0.33.0"
iroh-blobs = { version = "0.33.1", features = ["rpc"] }
iroh-docs = { version = "0.33.0", features = ["rpc"] }
iroh-gossip = "0.33.0"
iroh-base = "=0.33.0"
tokio = { version = "1.30.0", features = ["full"] }
anyhow = "1"
blake3 = "1.8.2"
hex = "0.4.3"
rand = "0.8.5"

helpers = { path = "../helpers" }
keystore = { path = "../keystore"}